--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webscraping",
   "version": "0.1.0",
+  "homepage": "https://SaranKaewchuay.github.io/WebResearcher",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -26,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
