--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webscraping",
   "version": "0.1.0",
-  "homepage": "https://SaranKaewchuay.github.io/webscraping.github.io",
+  "homepage": "https://SaranKaewchuay.github.io/webscraping.github.io/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
