--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "webscraping",
   "version": "0.1.0",
-  "home:":"https://sarankaewchuay.github.io/WUResearcher/",
-  
+  "home:": "https://sarankaewchuay.github.io/WUResearcher/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -19,6 +18,7 @@
     "datatables.net-dt": "^1.13.4",
     "install": "^0.13.0",
     "jquery": "^3.6.4",
+    "mdb-react-ui-kit": "^5.1.0",
     "npm": "^9.6.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -30,7 +30,6 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
